--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ a {
         
     }
 }
-@media only screen and (max-width: 915px){
+@media only screen and (max-width: 916px){
     [data-name=corner-top-left]{
         top: 0px;
         left: 0%;
@@ -275,18 +275,57 @@ a {
 
     }
 }
-@media only screen and (max-width: 820px){
+@media only screen and (max-width: 896px){
     [data-name=corner-top-left]{
         top: 0px;
         left: 0%;
         transition: all .3s ease-in;
+        height: 150px;
+        width: 150px;
         
     }
     [data-name=corner-bottom-right]{
         bottom: 0px;
         right: 0%;
         transition: all .3s ease-in ;
+        height: 150px;
+        width: 150px;
+
+    }
+}
+@media only screen and (max-width: 892px){
+    [data-name=corner-top-left]{
+        top: 0px;
+        left: 0%;
+        transition: all .3s ease-in;
+        height: 150px;
+        width: 150px;
         
+    }
+    [data-name=corner-bottom-right]{
+        bottom: 0px;
+        right: 0%;
+        transition: all .3s ease-in ;
+        height: 150px;
+        width: 150px;
+
+    }
+}
+@media only screen and (max-width: 820px){
+    [data-name=corner-top-left]{
+        top: 0px;
+        left: 0%;
+        transition: all .3s ease-in;
+        height: 300px;
+        width: 300px;
+        
+    }
+    [data-name=corner-bottom-right]{
+        bottom: 0px;
+        right: 0%;
+        transition: all .3s ease-in ;
+        height: 300px;
+        width: 300px;
 
     }
 }
@@ -311,13 +350,16 @@ a {
         top: 0px;
         left: 0%;
         transition: all .3s ease-in;
+        height: 100px;
+        width: 100px;
         
     }
     [data-name=corner-bottom-right]{
         bottom: 0px;
         right: 0%;
         transition: all .3s ease-in ;
-        
+        height: 100px;
+        width: 100px;
 
     }
 }
@@ -489,7 +531,7 @@ a {
     }
 }
 
-@media only screen and (max-width: 915px) {
+@media only screen and (max-width: 916px) {
     .title {
         font-size: calc(var(--title-fontsize) - 50%);
         line-height: calc(2rem + .9 * var(--title-fontsize));
@@ -545,6 +587,47 @@ a {
         font-variation-settings: "wght" 350;
     }
 }
+@media only screen and (max-width: 896px) {
+    .title {
+        font-size: calc(var(--title-fontsize) - 50%);
+        line-height: calc(0rem + 1.5 * var(--title-fontsize));
+        top: 50px;
+        transition: all .3s ease-in;
+        left: 8%;
+    }
+
+    .title h1 {
+        display: inline-flex;
+        flex-direction: column;
+    }
+
+    .title h1 span:first-child {
+        font-variation-settings: "wght" 350;
+    }
+}
+@media only screen and (max-width: 892px) {
+    .title {
+        font-size: calc(var(--title-fontsize) - 50%);
+        line-height: calc(1rem + 0.9 * var(--title-fontsize));
+        top: 30px;
+        transition: all .3s ease-in;
+        left: 8%;
+        
+        
+        
+    }
+
+    .title h1 {
+        display: inline-flex;
+        flex-direction: column;
+
+
+    }
+
+    .title h1 span:first-child {
+        font-variation-settings: "wght" 350;
+    }
+}
 @media only screen and (max-width: 820px) {
     .title {
         font-size: calc(var(--title-fontsize) * 1.3) ;
@@ -585,7 +668,26 @@ a {
     .title {
         font-size: calc(var(--title-fontsize) - 60%);
         line-height: calc(0rem + 1.5 * var(--title-fontsize));
-        top: 50px;
+        top: 30px;
+        transition: all .3s ease-in;
+        left: 10%;
+    }
+
+    .title h1 {
+        display: inline-flex;
+        
+        flex-direction: column;
+    }
+
+    .title h1 span:first-child {
+        font-variation-settings: "wght" 350;
+    }
+}
+@media only screen and (max-width: 668px){
+    .title {
+        font-size: calc(var(--title-fontsize) - 60%);
+        line-height: calc(0rem + 1.5 * var(--title-fontsize));
+        top: 30px;
         transition: all .3s ease-in;
         left: 10%;
     }
@@ -826,13 +928,13 @@ a {
     
 }
 
-@media only screen and (max-width: 915px) {
+@media only screen and (max-width: 916px) {
     .intro {
         white-space: normal;
         font-size: calc(1.0 * var(--p-fontsize));
         margin-right: 45%;
         top: 37%;
-        left: 11.9%;
+        left: 11.6%;
         margin-bottom: -15%;
       
         
@@ -911,6 +1013,64 @@ a {
 
     
 }
+@media only screen and (max-width: 896px) {
+    .intro {
+        white-space: normal;
+        font-size: calc(0.8 * var(--p-fontsize));
+        
+        margin-right: 43%;
+        top: 40%;
+        left: 10.7%;
+        
+    }
+    .intro h3{
+        white-space: normal;
+        font-size: calc(1.5 * var(--h3-fontsize));
+        line-height: 20px;
+    }
+
+    .vi:before{
+        top: 8%;
+        left: -4.5%;
+        height: 180px;
+    }
+    span#cycle{
+        font-size: calc(2.0 * var(--h3-fontsize));
+
+    }
+
+    
+}
+@media only screen and (max-width: 892px) {
+    .intro {
+        white-space: normal;
+        font-size: calc(0.8 * var(--p-fontsize));
+        
+        
+        margin-right: 43%;
+        top: 33%;
+        left: 10.6%;
+        
+    }
+    .intro h3{
+        white-space: normal;
+        font-size: calc(1.5 * var(--h3-fontsize));
+        line-height: 20px;
+
+    }
+
+    .vi:before{
+        top: 8%;
+        left: -4.5%;
+        height: 180px;
+    }
+    span#cycle{
+        font-size: calc(2.0 * var(--h3-fontsize));
+
+    }
+
+    
+}
 @media only screen and (max-width: 820px) {
     .intro {
         white-space: normal;
@@ -968,19 +1128,21 @@ a {
 
     
 }
+
 @media only screen and (max-width: 740px) and (max-height: 360px) {
     .intro {
         white-space: normal;
         font-size: calc(0.7 * var(--p-fontsize));
         
         margin-right: 40%;
-        top: 40%;
+        top: 35%;
         left: 12.5%;
         
     }
     .intro h3{
         white-space: normal;
         font-size: calc(1.2 * var(--h3-fontsize));
+        line-height: 20px;
     }
     
 
@@ -989,8 +1151,37 @@ a {
         left: -4.5%;
         height: 170px;
     }
-    #cycle{
-        font-size: calc(2.5 * var(--h3-fontsize));
+    span#cycle{
+        font-size: calc(1.5 * var(--h3-fontsize));
+
+    }
+
+    
+}
+@media only screen and (max-width: 668px) {
+    .intro {
+        white-space: normal;
+        font-size: calc(0.7 * var(--p-fontsize));
+        
+        margin-right: 40%;
+        top: 35%;
+        left: 12.5%;
+        
+    }
+    .intro h3{
+        white-space: normal;
+        font-size: calc(1.2 * var(--h3-fontsize));
+        line-height: 20px;
+    }
+    
+
+    .vi:before{
+        top: 10%;
+        left: -4.5%;
+        height: 170px;
+    }
+    span#cycle{
+        font-size: calc(1.5 * var(--h3-fontsize));
 
     }
 
@@ -1183,6 +1374,12 @@ a.underlined:hover, a:hover span.underlined {
 @media only screen and (max-width: 820px) {
     .nav-item {
         font-size: calc(1.0 * var(--nav-fontsize));
+        
+    }
+}
+@media only screen and (max-width: 740px) {
+    .nav-item {
+        font-size: calc(var(--nav-fontsize) - 10px);
         
     }
 }
@@ -1440,7 +1637,7 @@ font-size: calc(1.85 * var(--h3-fontsize));
 
         }
     }
-    @media only screen and (max-width: 915px) {
+    @media only screen and (max-width: 916px) {
         .scroll {
                 transition: margin 0.05s ease-out;
                 font-size: calc(0.3 * var(--h3-fontsize));
@@ -1559,6 +1756,84 @@ font-size: calc(1.85 * var(--h3-fontsize));
             
                     }
             }
+            @media only screen and (max-width: 896px) {
+                .scroll {
+                    
+                        transition: margin 0.05s ease-out;
+                        
+                        
+                        margin-top: -3%;
+                        margin-left: 90%;
+                        
+                        transform: translate(-118%, -20%);
+                
+                        
+                    
+                    }
+                    .scroll::before{
+                        margin-top: 0%;
+                
+                    }
+                
+                    .repolist{
+                        margin-top: -1%;
+                        margin-left: 57%;
+                        left: 0px;
+                        
+                        font-size: calc(2.5 * var(--h3-fontsize));
+                
+                        
+                
+                    }
+                
+                    .repolist a{
+                        font-size: calc(1.5 * var(--h3-fontsize));
+                
+                    }
+                    .repo{
+                        font-size: calc(1.0 *var(--title-fontsize));
+                
+                        }
+                }
+            @media only screen and (max-width: 892px) {
+                .scroll {
+                    
+                        transition: margin 0.05s ease-out;
+                        
+                        
+                        margin-top: -5%;
+                        margin-left: 90%;
+                        
+                        transform: translate(-118%, -20%);
+                
+                        
+                    
+                    }
+                    .scroll::before{
+                        margin-top: 0%;
+                
+                    }
+                
+                    .repolist{
+                        margin-top: -4%;
+                        margin-left: 58%;
+                        left: 0px;
+                        
+                        font-size: calc(2.5 * var(--h3-fontsize));
+                
+                        
+                
+                    }
+                
+                    .repolist a{
+                        font-size: calc(1.5 * var(--h3-fontsize));
+                
+                    }
+                    .repo{
+                        font-size: calc(1.0 *var(--title-fontsize));
+                
+                        }
+                }
         @media only screen and (max-width: 820px) {
             .scroll {
                 
@@ -1642,7 +1917,7 @@ font-size: calc(1.85 * var(--h3-fontsize));
                 .scroll {
                 
                     transition: margin 0.05s ease-out;
-                    margin-top: 0%;
+                    margin-top: -4%;
                     margin-left: 88%;
                     left: 100px;
                     transform: translate(-118%, -20%);
@@ -1654,7 +1929,7 @@ font-size: calc(1.85 * var(--h3-fontsize));
                 }
             
                 .repolist{
-                    margin-top: -1%;
+                    margin-top: -5%;
                     margin-left: 60%;
                     left: 0px;
                     font-size: calc(2.5 * var(--h3-fontsize));
@@ -1672,7 +1947,40 @@ font-size: calc(1.85 * var(--h3-fontsize));
                     
                 }
                 }
+                @media only screen and (max-width: 668px) {
+                    .scroll {
+                    
+                        transition: margin 0.05s ease-out;
+                        margin-top: -4%;
+                        margin-left: 88%;
+                        left: 100px;
+                        transform: translate(-118%, -20%);
+                    }
+                    .scroll::before{
+                    margin-top: -10%;
+                        
                 
+                    }
+                
+                    .repolist{
+                        margin-top: -5%;
+                        margin-left: 60%;
+                        left: 0px;
+                        font-size: calc(2.5 * var(--h3-fontsize));
+                
+                        
+                
+                    }
+                    
+                    .repolist a{
+                        font-size: calc(1.2 * var(--h3-fontsize));
+                
+                    }
+                    .repo{
+                        font-size: calc(var(--title-fontsize) - 5px);
+                        
+                    }
+                    } 
 
             @media only screen and (max-width: 415px) {
                 .scroll {
@@ -1902,6 +2210,33 @@ footer p {
             
         }
     }
+    @media only screen and (max-width: 896px) {
+        .icons img {
+            width: 4vw;
+            margin-bottom: 0%;
+            padding: 2vw;
+
+            
+        }
+    }
+    @media only screen and (max-width: 892px) {
+        .icons img {
+            width: 3vw;
+            margin-bottom: 5%;
+            padding: 2vw;
+
+            
+        }
+    }
+    @media only screen and (max-width: 820px) {
+        .icons img {
+            width: 7vw;
+            margin-bottom: 5%;
+            padding: 2vw;
+
+            
+        }
+    }
     @media only screen and (max-width: 768px) {
         .icons img {
             width: 7vw;
@@ -1909,7 +2244,13 @@ footer p {
 
         }
     }
+    @media only screen and (max-width: 740px) {
+        .icons img {
+            width: 3vw;
+            
 
+        }
+    }
     @media only screen and (max-width: 415px) {
         
         .icons img {
